--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2582,107 +2582,107 @@ stories:
   domain: http://www.gbtribune.com/
   link: https://www.gbtribune.com/news/local-news/city-start-collecting-eighth-street-project/
 images:
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
-- name: docks-docks-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-color.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
-- name: soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
-- name: copper-circuit-IMG_4746.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_4746.jpg
-- name: lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
-- name: berlinwall-DSC-0084-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crunch-paper.jpg
-- name: stories-beachclouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beachclouds-clean-view.jpg
-- name: school-clouds-church-clouds-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-creativity.jpg
-- name: border-crossing-bordercrossing-dark-rain.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-rain.png
-- name: bluelake-dry-skin-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-38-67.jpg
-- name: school-clouds-church-clouds-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crunch-paper.jpg
-- name: subway-subway-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-cinnamon-rolls.jpg
-- name: stories-new-16-77-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-77-800-500-0-max-0-1--1.jpg
-- name: walled-garden-walled-garden-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
-- name: oldhotel-oldhotel-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-storm.jpg
-- name: window-window-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-neo-instinct.jpg
-- name: ellis-island-ellis-island-room-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-neo-instinct.jpg
-- name: adam-smith-adam-smith-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-post-modern.jpg
-- name: walled-garden-walled-garden-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-gan-vogh.jpg
-- name: blossombar-rainbow-festival-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-50-62.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
-- name: rockingchair-rockingchair-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-missle.jpg
-- name: abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
-- name: mosaic-face-mosaic-face-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-colorful-blocks.jpg
-- name: sand-hand-sand-hand-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purp-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-monet-one.jpg
-- name: status-berlin-status-berlin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
-- name: downtheline-downtheline-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purp-paper.jpg
-- name: server-cloud-server-racks-clouds-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-umberto-bocc.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
-- name: aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
-- name: oldhotel-oldhotel-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
-- name: lincoln-memorial-lincolnmemorial-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-oily-mcoilface.jpg
-- name: aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
-- name: dc-statue-dcstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-emily-carr.jpg
-- name: border-fence-border-fence-on-hill-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crafty-painting.jpg
-- name: birdhouse-birdhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-far-away.jpg
-- name: old-barn-old-barn-1500-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-rain.jpg
-- name: supreme-court-supremecourt-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-internet-numbers.jpg
-- name: old-granary-field-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
-- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
-- name: walled-garden-walled-garden-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
-- name: capital-battle-capitolbattle-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
-- name: yuma-bank-yuma-bak-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-cinnamon-rolls.jpg
-- name: catacombs-catacombs-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-spagetti-accident.jpg
-- name: docks-docks-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-clean-view.jpg
-- name: store-on-corner-store-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-neo-instinct.jpg
-- name: old-door-lock-old-door-lock-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-two.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-- name: downtown-los-angeles-downtown-la-alberto-giacometti.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alberto-giacometti.JPG
+- name: oldroad-old-road-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alberto-giacometti.jpg
+- name: border-crossing-bordercrossing-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-granite.png
+- name: old-cabin-oldcabin-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colored-circuits.jpg
+- name: oldhotel-oldhotel-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-clean-view.jpg
+- name: old-cabin-oldcabin-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alberto-giacometti.jpg
+- name: aws-s3-stories-containership-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-deep-connections.jpg
+- name: old-granary-field-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-circuit.jpg
+- name: oldhouse-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
+- name: downtheline-downtheline-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-marcel-duchamp.jpg
+- name: oldcabin-oldcabin-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-granite.jpg
+- name: old-house-oldhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-atari-missle.jpg
+- name: white-house-lawn-white-house-window-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alberto-giacometti.jpg
+- name: white-house-lawn-white-house-window-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colored-circuits.jpg
+- name: blossombar-gred-mash-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-24-99.jpg
+- name: flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+- name: fence-fence-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alien-goggles.jpg
+- name: adam-smith-adam-smith-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
+- name: status-berlin-status-berlin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
+- name: hollywood-building-hollywood-building-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-electricity.jpg
+- name: beach-clouds-lifeguard-beachclouds-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-pablo-blue.jpg
+- name: razorwire-DSC-0080-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
+- name: docks-docks-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-kandinsky-bv.jpg
+- name: oldcabin-store-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-clean-view.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+- name: ellis-island-ellis-island-room-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-dream.jpg
+- name: crow-crow-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
+- name: old-cabin-oldcabin-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-spagetti-accident.jpg
+- name: subway-subway-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-soul.jpg
+- name: bordercrossing-bordercrossing-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colored-circuits.jpg
+- name: flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
+- name: carry-load-carryload-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-granite.jpg
+- name: downtheline-downtheline-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-circuit.jpg
+- name: ellis-island-ellisisland-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
+- name: mistywoods-babyfoot-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kand-two.jpg
+- name: castle-wall-DSC-0067-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
+- name: windowmountain-window-mountain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
+- name: supreme-court-supremecourt-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-feed-people.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
+- name: old-church-oldchurch-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-oily-mcoilface.jpg
+- name: border-fence-border-fence-on-hill-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-atari-missle.jpg
+- name: berlinwall2-berlinwall-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crunch-paper.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
+- name: curtain-curtain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-umberto-bocc.jpg
+- name: beach-rocks-beach-rocks-currents-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-feed-people.jpg
+- name: school-clouds-church-clouds-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-deep-connections.jpg
+- name: old-granary-field-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-post-modern.jpg
+- name: art-museum-art-museum-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-satan-red.jpg
+- name: fence-gorilla-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-dark-dali.jpg
+- name: ellis-island-ellisisland-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colored-circuits.jpg
+- name: crow_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_cinnamon_rolls.jpg
+- name: supreme-court-supremecourt-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-pablo-blue.jpg
 ---
 India's Economy Likely To Grow 7%, Government Says.&nbsp;Dont Let Summer Pests Bug You.&nbsp;Beach Safety Reminders From Charleston County Parks.&nbsp;Seismologist Explains Rolling Sensation From Earthquakes.&nbsp;New Freedom Chicken To Ride In Sisters Honor In Glen Alpine Parade.&nbsp;Drunk Driving Suspected In Crash That Kills Little Boy.&nbsp;Where The Sidewalk Ends U2026.&nbsp;Las Vegas Police Fire Officer Who Hesitated During Mass Shooting.&nbsp;
